--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/public/LogoFundacion.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fundacion Centro de Influencia Misionero Empresarial Manos que Ayudan</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
